--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,30 @@
-h1 {
+#header {
+	background-color: #f1f1f1;
+	padding: 10px;
 	text-align: center;
+	font-size: 35px;
 }
 
 main {
 	margin: 0 auto;
 }
 
+p {
+	text-align: justify;
+	font-size: 24px;
+	max-width: 50%;
+}
+
+p img {
+	max-height: 30px;
+}
+
 #canvas {
-	border: 1px solid black;
+	border: 2px solid black;
 	background-color: #FFF;
+	border-radius: 10px;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 #pj1, #pj2 {
